<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:backgroundTint="#dedede"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_ce"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#dedede"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_ce"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_clear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_input" />

    <Button
        android:id="@+id/button_div"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#dedede"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingBottom="0dp"
        android:text="@string/button_div"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button_mul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_bs"
        app:layout_constraintTop_toBottomOf="@+id/textview_input" />

    <Button
        android:id="@+id/button_bs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#dedede"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_bs"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button_9"
        app:layout_constraintEnd_toStartOf="@+id/button_div"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_clear"
        app:layout_constraintTop_toBottomOf="@+id/textview_input" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#dedede"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_clear"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_bs"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_ce"
        app:layout_constraintTop_toBottomOf="@+id/textview_input" />

    <Button
        android:id="@+id/button_mul"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#dedede"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_mul"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_div" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#efefef"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_9"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button_6"
        app:layout_constraintEnd_toStartOf="@+id/button_mul"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_bs" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#efefef"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_8"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_clear" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#efefef"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_7"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ce" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#dedede"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_minus"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_mul" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#efefef"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_4"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#efefef"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_6"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#efefef"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_5"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#dedede"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_equal"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        app:layout_constraintTop_toBottomOf="@+id/button_plus" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#dedede"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_plus"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button_equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/button_minus" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#efefef"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_2"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#efefef"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_1"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button_sign"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#efefef"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_3"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button_dot"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#efefef"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_0"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_dot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_sign"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <Button
        android:id="@+id/button_sign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#dedede"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_sign"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2.5sp"
        android:backgroundTint="#dedede"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/button_dot"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <TextView
        android:id="@+id/textview_input"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:background="#e1e1e1"
        android:gravity="right|center_vertical"
        android:paddingRight="15dp"
        android:text="@string/textview_output"
        android:textColor="#000000"
        android:textSize="120sp"
        app:layout_constraintBottom_toTopOf="@+id/button_ce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>